--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
         </div>
         <div class="section">
             <h3>Career Objectives</h3>
-            <p>Seeking a challenging position as an MSSQL DBA to utilize my skills and experience in managing databases efficiently and ensuring data security.</p>
+            <p>Seeking a challenging position as an Sailpoin Developer to utilize my skills and experience in managing databases efficiently and ensuring data security.</p>
         </div>
         <div class="section">
             <h3>Qualifications</h3>
             <ul>
-                <li>Bachelor's Degree in Computer Science from XYZ University</li>
-                <li>Proficient in MSSQL Server, SQL, and database management</li>
+                <li>Bachelor's Degree in Computer Application from AKU University Patna</li>
+                <li>Proficient in Java,Python,MSSQL Server, SQL, and database management</li>
                 <li>Strong analytical and problem-solving skills</li>
             </ul>
         </div>
         <div class="section">
             <h3>Certifications</h3>
             <ul>
+                <li>SailPoint</li>
                 <li>Microsoft Certified: Azure Fundamentals (AZ-900)</li>
                 <li>Microsoft Certified: Azure Database Administrator Associate (DP-300)</li>
             </ul>
@@ -37,19 +38,19 @@
         <div class="section">
             <h3>Experience</h3>
             <ul>
-                <li>Database Administrator at ABC Company (2 years)
+                <li>Wipro Technologies</li>
+                <ul>
+                    <li>IAM Engineer</li> 
+                </ul>
                     <ul>
-                        <li>Managed and maintained MSSQL databases</li>
-                        <li>Performed regular backups and recovery operations</li>
-                        <li>Optimized database performance and queries</li>
-                        <li>Ensured database security and compliance with industry standards</li>
+                        <li>I have 2+ years of experience in the IDAM domain, having knowledge of Saviynt,SailPoint and Courion, onboarding of application, connectors, populating identity, life cycle manager, events (joiner, mover, leaver), provisioning policies, re-certifications, creating rules, aggregation, Active directory.</li>
                     </ul>
                 </li>
             </ul>
         </div>
         <div class="section">
             <h3>GitHub</h3>
-            <p>Check out my hosted CV on GitHub: <a href="https://github.com/johndoe/cv">https://github.com/johndoe/cv</a></p>
+            <p>Check out my hosted CV on GitHub: <a href="https://github.com/shekh1shub/ShubhamShekhar_CV">https://github.com/shekh1shub/ShubhamShekhar_CV</a></p>
         </div>
     </div>
 </body>
